Playing with EDF reading
Renamed Signals to DataInterface (test executable)
Added header reading capability to DataReader
Added header printing capability to DataInterface
Added test to TestApp to print out header data